edit prices, add photos

--- a/app/index.html
+++ b/app/index.html
@@ -280,7 +280,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/1.jpg" data-fancybox="house-1_4th_roof">
-														<div class="house-price"><span>3.15 млн ₽</span></div>
+														<div class="house-price"><span>3.34 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/single_lvl/1_4th_roof/sm.jpg" alt="Дом 90кв. м."></span>
 													</a>
@@ -297,7 +297,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/single_lvl/2_4th_roof/1.jpg?v=1.2" data-fancybox="house-2_4th_roof">
-														<div class="house-price"><span>3.90 млн ₽</span></div>
+														<div class="house-price"><span>4.13 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/single_lvl/2_4th_roof/sm.jpg?v=1.2" alt="Дом 120кв. м"></span>
 													</a>
@@ -350,7 +350,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/people_1/1.jpg" data-fancybox="house-people_1">
-														<div class="house-price"><span>2.50 млн ₽</span></div>
+														<div class="house-price"><span>2.65 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/people_1/sm.jpg?v=1.2" alt="Дом 90кв. м."></span>
 													</a>
@@ -369,7 +369,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/people_2/1.jpg" data-fancybox="house-people_2">
-														<div class="house-price"><span>3.10 млн ₽</span></div>
+														<div class="house-price"><span>3.29 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/people_2/sm.jpg?v=1.2" alt="Дом 120кв. м"></span>
 													</a>
@@ -423,7 +423,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/classic_1/1.jpg" data-fancybox="house-classic_1">
-														<div class="house-price"><span>2.90 млн ₽</span></div>
+														<div class="house-price"><span>3.07 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/classic_1/sm.jpg?v=1.2" alt="Дом 90кв. м."></span>
 													</a>
@@ -442,7 +442,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/classic_2/1.jpg" data-fancybox="house-classic_2">
-														<div class="house-price"><span>3.55 млн ₽</span></div>
+														<div class="house-price"><span>3.76 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/classic_2/sm.jpg?v=1.2" alt="Дом 120кв. м."></span>
 													</a>
@@ -461,7 +461,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/classic_3/1.jpg" data-fancybox="house-classic_3">
-														<div class="house-price"><span>4.20 млн ₽</span></div>
+														<div class="house-price"><span>4.45 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/classic_3/sm.jpg?v=1.2" alt="Дом 150кв. м"></span>
 													</a>
@@ -502,8 +502,9 @@
 								<h3><span>Самое важное, Вы получаете дом уже с готовым фасадом, утеплителем, идеально ровными стенами, готовыми под обои – и все это с гарантией от 50 лет!</span></h3>
 								<ul>
 									<li><p><span>Фундамент буронабивной от 3 до 4м глубиной;</span></p></li>
+									<li><p><span>Колонно-ригельная система;</span></p></li>
 									<li><p><span>Перекрытия: ребристые ж/б плиты с утеплением на 1 этаже + бетон; деревянное межэтажное перекрытие (межэтажное бетонное перекрытие для дома "Классика"), ребристые ж/б плиты перекрытия с утеплением на кровле;</span></p></li>
-									<li><p><span>Трехслойные стеновые панели с утеплением: внешний фасад - бетон 6см + утеплитель 15см + бетон 8 см;</span></p></li>
+									<li><p><span>Трехслойные стеновые панели с утеплением: внешний фасад - бетон 5см + утеплитель 15см + бетон 6 см;</span></p></li>
 									<li><p><span>Кровля - односкатная под уклоном, устройство рулонной кровли (Народный дом), стропильная система, четырехскатная холодная кровля с водосточной системой и подшивкой софитами (дома "Классика", одноэтажные дома);</span></p></li>
 									<li><p><span>Лестница межэтажная деревянная с состариванием и шлифованием;</span></p></li>
 									<li><p><span>Окна ПВХ, входная утепленная дверь;</span></p></li>
@@ -521,7 +522,6 @@
 									<li><p><span>Навес под авто - 150 000р.;</span></p></li>
 									<li><p><span>Увеличение высоты этажа на каждые 10 см за каждый этаж, но не более 20 см на дом - 40 тыс, 45 тыс, 50 тыс, 60 тыс, в зависимости от площади дома;</span></p></li>
 									<li><p><span>Устройство водосточной системы в линейке Народный дом - от 50 тыс до 70 тыс р.;</span></p></li>
-									<li><p><span>Межэтажные бетонные перекрытия в линейке Народный дом - 30 тыс, 40 тыс, 50 тыс, 60 тыс.р.;</span></p></li>
 									<li><p><span>Охрана на объекте = 35 000р/ мес (3 мес);</span></p></li>
 									<li><p><span>Аренда дизельной электростанции + топливо - 90 000р (3 000р/ сутки, 1 мес.);</span></p></li>
 									<li><p><span>Доставка домокомплекта до стройплощадки: от 30 000р в зависимости от расположения;</span></p></li>
@@ -542,7 +542,7 @@
 									</a>
 								</div>
 
-								<div class="video-blocks">
+								<!-- <div class="video-blocks">
 
 									<div class="video-block">
 										<h2 class="next-h">Этапы строительства дома Народный</h2>
@@ -558,7 +558,14 @@
 										</div>
 									</div>
 
-								</div>
+								</div> -->
+	
+									<div class="video-block">
+										<h2 class="next-h">Этапы строительства дома</h2>
+										<div class="video">
+											<iframe width="560" height="315" src="https://www.youtube.com/embed/LLzPBfVWISA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										</div>
+									</div>
 
 
 								<h2 class="next-h">Наши преимущества</h2>
