--- a/app/our-objects.html
+++ b/app/our-objects.html
@@ -505,6 +505,38 @@
 					</div>
 
 					<div class="gallery-block">
+						<h2 class="h2">Дом двухэтажный, 111,91м<sup><small>2</small></sup> с террасой, балконом и
+							четырехскатной кровлей в с. Матвеевка</h2>
+						<div class="masonry">
+
+							<a class="item image fancybox" href="img/gallery/16_matveevka/1.jpg?v=2.2" data-fancybox="16_matveevka">
+								<img src="img/gallery/16_matveevka/sm/1.jpg?v=2.2" alt="img">
+							</a>
+
+							<a class="item image fancybox" href="img/gallery/16_matveevka/2.jpg?v=2.2" data-fancybox="16_matveevka">
+								<img src="img/gallery/16_matveevka/sm/2.jpg?v=2.2" alt="img">
+							</a>
+
+							<a class="item image fancybox" href="img/gallery/16_matveevka/3.jpg?v=2.2" data-fancybox="16_matveevka">
+								<img src="img/gallery/16_matveevka/sm/3.jpg?v=2.2" alt="img">
+							</a>
+
+							<a class="item image fancybox" href="img/gallery/16_matveevka/4.jpg?v=2.2" data-fancybox="16_matveevka">
+								<img src="img/gallery/16_matveevka/sm/4.jpg?v=2.2" alt="img">
+							</a>
+
+							<a class="item image fancybox" href="img/gallery/16_matveevka/5.jpg?v=2.2" data-fancybox="16_matveevka">
+								<img src="img/gallery/16_matveevka/sm/5.jpg?v=2.2" alt="img">
+							</a>
+
+							<a class="item image fancybox" href="img/gallery/16_matveevka/6.jpg?v=2.2" data-fancybox="16_matveevka">
+								<img src="img/gallery/16_matveevka/sm/6.jpg?v=2.2" alt="img">
+							</a>
+
+						</div>
+					</div>
+
+					<div class="gallery-block">
 						<h2 class="h2">Дом двухэтажный 138,74м<sup><small>2</small></sup> с четырехскатной кровлей на ул. Невская
 						</h2>
 						<div class="masonry">
