--- a/app/index.html
+++ b/app/index.html
@@ -115,7 +115,7 @@
 
 						<div class="editable_block-11 widget-7 editorElement layer-type-widget">
 							<div class="body">
-								<div class="title"><h1 class="align-elem">Готовый дом по цене квартиры за 2-3 месяца! Ипотека!<br><span>Дома от 82 м<sup>2</sup> от 2.50 млн руб!</span></h1></div>
+								<div class="title"><h1 class="align-elem">Готовый дом по цене квартиры за 2-3 месяца! Ипотека!<br><span>Дома от 82 м<sup>2</sup> от 2.65 млн руб!</span></h1></div>
 								<div class="text">
 									<div class="layout column layout_8" >
 										<a class="open-form-button button-8 widget-5 widget-type-button editorElement layer-type-widget head-button" href="#take-consultation" ><span>Узнать варианты ипотечных программ</span></a>
@@ -285,10 +285,10 @@
 														<span class="img-convert img-cover"><img src="img/houses/single_lvl/1_4th_roof/sm.jpg" alt="Дом 90кв. м."></span>
 													</a>
 													<div class="d-none">
-														<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/2.jpg?v=1.2" data-fancybox="house-1_4th_roof" data-thumb="img/houses/single_lvl/1_4th_roof/2.jpg?v=1.2"></a>
-														<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/3.jpg?v=1.2" data-fancybox="house-1_4th_roof" data-thumb="img/houses/single_lvl/1_4th_roof/3.jpg?v=1.2"></a>
-														<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/4.jpg?v=1.2" data-fancybox="house-1_4th_roof" data-thumb="img/houses/single_lvl/1_4th_roof/4.jpg?v=1.2"></a>
-														<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/scheme.jpg?v=1.2" data-fancybox="house-1_4th_roof" data-thumb="img/houses/single_lvl/1_4th_roof/scheme.jpg?v=1.2"></a>
+														<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/2.jpg?v=1.3" data-fancybox="house-1_4th_roof" data-thumb="img/houses/single_lvl/1_4th_roof/2.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/3.jpg?v=1.3" data-fancybox="house-1_4th_roof" data-thumb="img/houses/single_lvl/1_4th_roof/3.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/4.jpg?v=1.3" data-fancybox="house-1_4th_roof" data-thumb="img/houses/single_lvl/1_4th_roof/4.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/scheme.jpg?v=1.3" data-fancybox="house-1_4th_roof" data-thumb="img/houses/single_lvl/1_4th_roof/scheme.jpg?v=1.3"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 82,33кв. м.</span></span>
 												</div>
@@ -296,15 +296,49 @@
 
 											<div class="item-outer">
 												<div class="item">
-													<a class="image fancybox" href="img/houses/single_lvl/2_4th_roof/1.jpg?v=1.2" data-fancybox="house-2_4th_roof">
-														<div class="house-price"><span>4.13 млн ₽</span></div>
+													<a class="image fancybox" href="img/houses/single_lvl/2_4th_roof/1.jpg" data-fancybox="house-2_4th_roof">
+														<div class="house-price"><span>3.80 млн ₽</span></div>
 														<div class="item-label"></div>
-														<span class="img-convert img-cover"><img src="img/houses/single_lvl/2_4th_roof/sm.jpg?v=1.2" alt="Дом 120кв. м"></span>
+														<span class="img-convert img-cover"><img src="img/houses/single_lvl/2_4th_roof/sm.jpg" alt="Дом 90кв. м."></span>
 													</a>
 													<div class="d-none">
-														<a class="image fancybox" href="img/houses/single_lvl/2_4th_roof/scheme.jpg?v=1.2" data-fancybox="house-2_4th_roof" data-thumb="img/houses/single_lvl/2_4th_roof/scheme.jpg"></a>
+														<a class="image fancybox" href="img/houses/single_lvl/2_4th_roof/2.jpg?v=1.3" data-fancybox="house-2_4th_roof" data-thumb="img/houses/single_lvl/2_4th_roof/2.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/single_lvl/2_4th_roof/3.jpg?v=1.3" data-fancybox="house-2_4th_roof" data-thumb="img/houses/single_lvl/2_4th_roof/3.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/single_lvl/2_4th_roof/4.jpg?v=1.3" data-fancybox="house-2_4th_roof" data-thumb="img/houses/single_lvl/2_4th_roof/4.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/single_lvl/2_4th_roof/scheme.jpg?v=1.3" data-fancybox="house-2_4th_roof" data-thumb="img/houses/single_lvl/2_4th_roof/scheme.jpg?v=1.3"></a>
 													</div>
-													<span class="title"><span class="align-elem">Общая площадь 121,16кв. м.</span></span>
+													<span class="title"><span class="align-elem">Общая площадь 98,55кв. м.</span></span>
+												</div>
+											</div>
+
+											<div class="item-outer">
+												<div class="item">
+													<a class="image fancybox" href="img/houses/single_lvl/3_4th_roof/1.jpg?v=1.3" data-fancybox="house-3_4th_roof">
+														<div class="house-price"><span>4.13 млн ₽</span></div>
+														<div class="item-label"></div>
+														<span class="img-convert img-cover"><img src="img/houses/single_lvl/3_4th_roof/sm.jpg?v=1.3" alt="Дом 120кв. м"></span>
+													</a>
+													<div class="d-none">
+														<a class="image fancybox" href="img/houses/single_lvl/3_4th_roof/scheme.jpg?v=1.3" data-fancybox="house-3_4th_roof" data-thumb="img/houses/single_lvl/3_4th_roof/scheme.jpg"></a>
+													</div>
+													<span class="title"><span class="align-elem">Общая площадь 122,16кв. м.</span></span>
+												</div>
+											</div>
+
+											<div class="item-outer">
+												<div class="item">
+													<a class="image fancybox" href="img/houses/single_lvl/4_4th_roof/1.jpg" data-fancybox="house-4_4th_roof">
+														<div class="house-price"><span>4.86 млн ₽</span></div>
+														<div class="item-label"></div>
+														<span class="img-convert img-cover"><img src="img/houses/single_lvl/4_4th_roof/sm.jpg" alt="Дом 90кв. м."></span>
+													</a>
+													<div class="d-none">
+														<a class="image fancybox" href="img/houses/single_lvl/4_4th_roof/2.jpg?v=1.3" data-fancybox="house-4_4th_roof" data-thumb="img/houses/single_lvl/4_4th_roof/2.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/single_lvl/4_4th_roof/3.jpg?v=1.3" data-fancybox="house-4_4th_roof" data-thumb="img/houses/single_lvl/4_4th_roof/3.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/single_lvl/4_4th_roof/4.jpg?v=1.3" data-fancybox="house-4_4th_roof" data-thumb="img/houses/single_lvl/4_4th_roof/4.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/single_lvl/4_4th_roof/scheme.jpg?v=1.3" data-fancybox="house-4_4th_roof" data-thumb="img/houses/single_lvl/4_4th_roof/scheme.jpg?v=1.3"></a>
+													</div>
+													<span class="title"><span class="align-elem">Общая площадь 149,93кв. м.</span></span>
 												</div>
 											</div>
 
@@ -352,14 +386,14 @@
 													<a class="image fancybox" href="img/houses/people_1/1.jpg" data-fancybox="house-people_1">
 														<div class="house-price"><span>2.65 млн ₽</span></div>
 														<div class="item-label"></div>
-														<span class="img-convert img-cover"><img src="img/houses/people_1/sm.jpg?v=1.2" alt="Дом 90кв. м."></span>
+														<span class="img-convert img-cover"><img src="img/houses/people_1/sm.jpg?v=1.3" alt="Дом 90кв. м."></span>
 													</a>
 													<div class="d-none">
-														<a class="image fancybox" href="img/houses/people_1/2.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/2.jpg"></a>
-														<a class="image fancybox" href="img/houses/people_1/3.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/3.jpg"></a>
-														<a class="image fancybox" href="img/houses/people_1/4.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/4.jpg"></a>
-														<a class="image fancybox" href="img/houses/people_1/5.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/5.jpg"></a>
-														<a class="image fancybox" href="img/houses/people_1/scheme.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/scheme.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_1/2.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/2.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/people_1/3.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/3.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/people_1/4.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/4.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/people_1/5.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/5.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/people_1/scheme.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/scheme.jpg?v=1.3"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 90,04кв. м.</span></span>
 													<div class="text"><div class="align-elem"><p>Площадь дома 84,76кв. м.</p></div></div>
@@ -371,7 +405,7 @@
 													<a class="image fancybox" href="img/houses/people_2/1.jpg" data-fancybox="house-people_2">
 														<div class="house-price"><span>3.29 млн ₽</span></div>
 														<div class="item-label"></div>
-														<span class="img-convert img-cover"><img src="img/houses/people_2/sm.jpg?v=1.2" alt="Дом 120кв. м"></span>
+														<span class="img-convert img-cover"><img src="img/houses/people_2/sm.jpg?v=1.3" alt="Дом 120кв. м"></span>
 													</a>
 													<div class="d-none">
 														<a class="image fancybox" href="img/houses/people_2/2.jpg" data-fancybox="house-people_2" data-thumb="img/houses/people_2/2.jpg"></a>
@@ -425,14 +459,14 @@
 													<a class="image fancybox" href="img/houses/classic_1/1.jpg" data-fancybox="house-classic_1">
 														<div class="house-price"><span>3.07 млн ₽</span></div>
 														<div class="item-label"></div>
-														<span class="img-convert img-cover"><img src="img/houses/classic_1/sm.jpg?v=1.2" alt="Дом 90кв. м."></span>
+														<span class="img-convert img-cover"><img src="img/houses/classic_1/sm.jpg?v=1.3" alt="Дом 90кв. м."></span>
 													</a>
 													<div class="d-none">
-														<a class="image fancybox" href="img/houses/classic_1/2.jpg" data-fancybox="house-classic_1" data-thumb="img/houses/classic_1/2.jpg"></a>
-														<a class="image fancybox" href="img/houses/classic_1/3.jpg" data-fancybox="house-classic_1" data-thumb="img/houses/classic_1/3.jpg"></a>
-														<a class="image fancybox" href="img/houses/classic_1/4.jpg" data-fancybox="house-classic_1" data-thumb="img/houses/classic_1/4.jpg"></a>
-														<a class="image fancybox" href="img/houses/classic_1/5.jpg" data-fancybox="house-classic_1" data-thumb="img/houses/classic_1/5.jpg"></a>
-														<a class="image fancybox" href="img/houses/classic_1/scheme.jpg" data-fancybox="house-classic_1" data-thumb="img/houses/classic_1/scheme.jpg"></a>
+														<a class="image fancybox" href="img/houses/classic_1/2.jpg" data-fancybox="house-classic_1" data-thumb="img/houses/classic_1/2.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/classic_1/3.jpg" data-fancybox="house-classic_1" data-thumb="img/houses/classic_1/3.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/classic_1/4.jpg" data-fancybox="house-classic_1" data-thumb="img/houses/classic_1/4.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/classic_1/5.jpg" data-fancybox="house-classic_1" data-thumb="img/houses/classic_1/5.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/classic_1/scheme.jpg" data-fancybox="house-classic_1" data-thumb="img/houses/classic_1/scheme.jpg?v=1.3"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 90,04кв. м.</span></span>
 													<div class="text"><div class="align-elem"><p>Площадь дома 84,76кв. м.</p></div></div>
@@ -444,13 +478,10 @@
 													<a class="image fancybox" href="img/houses/classic_2/1.jpg" data-fancybox="house-classic_2">
 														<div class="house-price"><span>3.76 млн ₽</span></div>
 														<div class="item-label"></div>
-														<span class="img-convert img-cover"><img src="img/houses/classic_2/sm.jpg?v=1.2" alt="Дом 120кв. м."></span>
+														<span class="img-convert img-cover"><img src="img/houses/classic_2/sm.jpg?v=1.3" alt="Дом 120кв. м."></span>
 													</a>
 													<div class="d-none">
 														<a class="image fancybox" href="img/houses/classic_2/2.jpg" data-fancybox="house-classic_2" data-thumb="img/houses/classic_2/2.jpg"></a>
-														<a class="image fancybox" href="img/houses/classic_2/3.jpg" data-fancybox="house-classic_2" data-thumb="img/houses/classic_2/3.jpg"></a>
-														<a class="image fancybox" href="img/houses/classic_2/4.jpg" data-fancybox="house-classic_2" data-thumb="img/houses/classic_2/4.jpg"></a>
-														<a class="image fancybox" href="img/houses/classic_2/5.jpg" data-fancybox="house-classic_2" data-thumb="img/houses/classic_2/5.jpg"></a>
 														<a class="image fancybox" href="img/houses/classic_2/scheme.jpg" data-fancybox="house-classic_2" data-thumb="img/houses/classic_2/scheme.jpg"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 120,54кв. м.</span></span>
@@ -463,18 +494,36 @@
 													<a class="image fancybox" href="img/houses/classic_3/1.jpg" data-fancybox="house-classic_3">
 														<div class="house-price"><span>4.45 млн ₽</span></div>
 														<div class="item-label"></div>
-														<span class="img-convert img-cover"><img src="img/houses/classic_3/sm.jpg?v=1.2" alt="Дом 150кв. м"></span>
+														<span class="img-convert img-cover"><img src="img/houses/classic_3/sm.jpg?v=1.3" alt="Дом 150кв. м"></span>
 													</a>
 													<div class="d-none">
-														<a class="image fancybox" href="img/houses/classic_3/2.jpg" data-fancybox="house-classic_3" data-thumb="img/houses/classic_3/2.jpg"></a>
-														<a class="image fancybox" href="img/houses/classic_3/3.jpg" data-fancybox="house-classic_3" data-thumb="img/houses/classic_3/3.jpg"></a>
-														<a class="image fancybox" href="img/houses/classic_3/4.jpg" data-fancybox="house-classic_3" data-thumb="img/houses/classic_3/4.jpg"></a>
-														<a class="image fancybox" href="img/houses/classic_3/5.jpg" data-fancybox="house-classic_3" data-thumb="img/houses/classic_3/5.jpg"></a>
-														<a class="image fancybox" href="img/houses/classic_3/6.jpg" data-fancybox="house-classic_3" data-thumb="img/houses/classic_3/6.jpg"></a>
-														<a class="image fancybox" href="img/houses/classic_3/scheme.jpg" data-fancybox="house-classic_3" data-thumb="img/houses/classic_2/scheme.jpg"></a>
+														<a class="image fancybox" href="img/houses/classic_3/2.jpg" data-fancybox="house-classic_3" data-thumb="img/houses/classic_3/2.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/classic_3/3.jpg" data-fancybox="house-classic_3" data-thumb="img/houses/classic_3/3.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/classic_3/4.jpg" data-fancybox="house-classic_3" data-thumb="img/houses/classic_3/4.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/classic_3/5.jpg" data-fancybox="house-classic_3" data-thumb="img/houses/classic_3/5.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/classic_3/6.jpg" data-fancybox="house-classic_3" data-thumb="img/houses/classic_3/6.jpg?v=1.3"></a>
+														<a class="image fancybox" href="img/houses/classic_3/scheme.jpg" data-fancybox="house-classic_3" data-thumb="img/houses/classic_3/scheme.jpg?v=1.3"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 150,19кв. м.</span></span>
 													<div class="text"><div class="align-elem"><p>Площадь дома 146,67кв. м.</p></div></div>
+												</div>
+											</div>
+
+											<div class="item-outer">
+												<div class="item">
+													<a class="image fancybox" href="img/houses/classic_4/1.jpg" data-fancybox="house-classic_4">
+														<div class="house-price"><span>5.73 млн ₽</span></div>
+														<div class="item-label"></div>
+														<span class="img-convert img-cover"><img src="img/houses/classic_4/sm.jpg?v=1.3" alt="Дом 150кв. м"></span>
+													</a>
+													<div class="d-none">
+														<a class="image fancybox" href="img/houses/classic_4/2.jpg" data-fancybox="house-classic_4" data-thumb="img/houses/classic_4/2.jpg"></a>
+														<a class="image fancybox" href="img/houses/classic_4/3.jpg" data-fancybox="house-classic_4" data-thumb="img/houses/classic_4/3.jpg"></a>
+														<a class="image fancybox" href="img/houses/classic_4/4.jpg" data-fancybox="house-classic_4" data-thumb="img/houses/classic_4/4.jpg"></a>
+														<a class="image fancybox" href="img/houses/classic_4/scheme.jpg" data-fancybox="house-classic_4" data-thumb="img/houses/classic_4/scheme.jpg"></a>
+													</div>
+													<span class="title"><span class="align-elem">Общая площадь 193,94кв. м.</span></span>
+													<div class="text"><div class="align-elem"><p>Площадь дома 187кв. м.</p></div></div>
 												</div>
 											</div>
 
