new home images

--- a/app/our-objects.html
+++ b/app/our-objects.html
@@ -714,7 +714,7 @@
 						</div>
 					</div>
 
-					<div class="gallery-block">
+					<!-- <div class="gallery-block">
 						<h2 class="h2">Дом двухэтажный "Народный" 90,04м<sup><small>2</small></sup> с односкатной кровлей в
 							коттеджном поселке "Солнечная поляна"</h2>
 						<div class="masonry">
@@ -724,18 +724,8 @@
 								<img src="img/gallery/14_sunny_people_1/sm/1.jpg?v=2.5" alt="img">
 							</a>
 
-							<!-- <a class="item image fancybox" href="img/gallery/14_sunny_people_1/2.jpg?v=2.5"
-								data-fancybox="14_sunny_people_1">
-								<img src="img/gallery/14_sunny_people_1/sm/2.jpg?v=2.5" alt="img">
-							</a>
-
-							<a class="item image fancybox" href="img/gallery/14_sunny_people_1/3.jpg?v=2.5"
-								data-fancybox="14_sunny_people_1">
-								<img src="img/gallery/14_sunny_people_1/sm/3.jpg?v=2.5" alt="img">
-							</a> -->
-
 						</div>
-					</div>
+					</div> -->
 
 					<div class="gallery-block">
 						<h2 class="h2">Дом двухэтажный 120,54м<sup><small>2</small></sup> с четырехскатной кровлей, с балконом в
