--- a/app/index.html
+++ b/app/index.html
@@ -555,38 +555,39 @@
 							<div class="blocklist-23 widget-13 horizontal_mode widget-type-block_list editorElement layer-type-widget" data-slider="0,0,1,1,1" data-swipe="0,0,1,1,1" data-setting-mode="horizontal" data-setting-pause="4000" data-setting-auto="1" data-setting-controls="1,1,0,0,0" data-setting-pager="1,1,1,1,1" data-setting-pager_selector=".blocklist-23 .pager-wrap" data-setting-prev_selector=".blocklist-23 .prev" data-setting-next_selector=".blocklist-23 .next" data-setting-count="3,3,3,3,3" data-setting-columns="3,2,2,1,1" data-setting-move="" data-setting-prev_text="" data-setting-next_text="" data-setting-auto_controls_selector=".blocklist-23 .auto_controls" data-setting-auto_controls="0,0,0,0,0" data-setting-autoControlsCombine="0" data_photo_swipe="0" item_id="23" data-setting-vertical_aligner="none">
 
 								<h2>Что входит в цену дома:</h2>
-								<h3><span>Самое важное, Вы получаете дом уже с готовым фасадом, утеплителем, идеально ровными стенами, готовыми под обои – и все это с гарантией от 50 лет!</span></h3>
+								<h3><span>Самое важное, Вы получаете дом уже с готовым фасадом, утеплителем, кровлей – и все это с гарантией от 50 лет!</span></h3>
 								<ul>
-									<li><p><span>Фундамент буронабивной от 3 до 4м глубиной;</span></p></li>
-									<li><p><span>Колонно-ригельная система;</span></p></li>
-									<li><p><span>Перекрытия: ребристые ж/б плиты с утеплением на 1 этаже + бетон; деревянное межэтажное перекрытие (межэтажное бетонное перекрытие для дома "Классика"), ребристые ж/б плиты перекрытия с утеплением на кровле;</span></p></li>
-									<li><p><span>Трехслойные стеновые панели с утеплением: внешний фасад - бетон 5см + утеплитель 15см + бетон 6 см;</span></p></li>
+									<li><p><span>фундамент буронабивной от 3 до 4м глубиной;</span></p></li>
+									<li><p><span>Несущая колонно-ригельная система + перекрытия: ребристые ж/б плиты с утеплением на 1 этаже
+									+ бетон; межэтажное ребристое бетонное перекрытие, ребристые ж/б плиты перекрытия с
+									утеплением на кровле;</span></p></li>
+									<li><p><span>Трехслойные стеновые панели с утеплением: внешний фасад - бетон 5 см + утеплитель 15 см + бетон 6 см;</span></p></li>
 									<li><p><span>Кровля - односкатная под уклоном, устройство рулонной кровли (Народный дом), стропильная система, четырехскатная холодная кровля с водосточной системой и подшивкой софитами (дома "Классика", одноэтажные дома);</span></p></li>
 									<li><p><span>Лестница межэтажная деревянная с состариванием и шлифованием;</span></p></li>
 									<li><p><span>Окна ПВХ, входная утепленная дверь;</span></p></li>
-									<li><p><span>Фасад - под каменные блоки, окрас в цвет - на выбор клиента;</span></p></li>
-									<li><p><span>Стояки холодного водоснабжения  и канализации, подключение к сетям;</span></p></li>
-									<li><p><span>Вентиляция;</span></p></li>
-									<li><p><span>Крыльцо,  балконы с ограждением - ковка;</span></p></li>
-									<li><p><span>Внутренняя отделка: <strong>чистовая отделка</strong>, шпатлевка внешних стен;</span></p></li>
+									<li><p><span>Фасад - окраска фасадной краской + декоративные элементы фахверк;</span></p></li>
+									<li><p><span>Вентиляция - короб в с/у и кухне, выход на кровлю;</span></p></li>
+									<li><p><span>Крыльцо, балконы с ограждением – ковка;</span></p></li>
+									<li><p><span>Внутренняя отделка: без отделки, заделка межпанельных швов, перегородки с/у 1-го этажа из отсевоблока.</span></p></li>
 								</ul>
 
 								<h3><span>Дополнительно оплачиваются:</span></h3>
 								<ul>
-									<li><p><span>Стояки холодного водоснабжения  и канализации, подключение к сетям - 35 000 руб.;</span></p></li>
-									<li><p><span>Перегородки межкомнатные: от 100 тыс. до 170 тыс р.;</span></p></li>
-									<li><p><span>Навес под авто - 150 000р.;</span></p></li>
-									<li><p><span>Увеличение высоты этажа на каждые 10 см за каждый этаж, но не более 20 см на дом - 40 тыс, 45 тыс, 50 тыс, 60 тыс, в зависимости от площади дома;</span></p></li>
-									<li><p><span>Устройство водосточной системы в линейке Народный дом - от 50 тыс до 70 тыс р.;</span></p></li>
-									<li><p><span>Охрана на объекте = 35 000р/ мес (3 мес);</span></p></li>
+									<li><p><span>Фасад - замена на фасад Технониколь HAUBERK: + 6% к стоимости дома;</span></p></li>
+									<li><p><span>Стояки холодного водоснабжения и канализации, подключение к сетям – 35 000 руб;</span></p></li>
+									<li><p><span>Перегородки межкомнатные из ПГП: от 100 тыс. до 170 тыс р;</span></p></li>
+									<li><p><span>Навес под авто - 150 000р;</span></p></li>
+									<li><p><span>Увеличение высоты этажа на каждые 10 см за каждый этаж, но не более 40 см / 50 см на дом - 40 тыс, 45 тыс, 50 тыс, 60 тыс, в зависимости от площади дома;</span></p></li>
+									<li><p><span>Охрана на объекте = 35 000р/мес. (3 мес.);</span></p></li>
 									<li><p><span>Аренда дизельной электростанции + топливо - 90 000р (3 000р/ сутки, 1 мес.);</span></p></li>
 									<li><p><span>Доставка домокомплекта до стройплощадки: от 30 000р в зависимости от расположения;</span></p></li>
 									<li><p><span>Геодезические работы - от 15, 20, 25, 30 тыс р, в зависимости от дома;</span></p></li>
-									<li><p><span>Разрешительная документация (разршение, тех документы, ввод) = 30 000р.;</span></p></li>
-									<li><p><span>Подготовительные работы на участке для сборки: в зависимости от посадки дома от границы участка: от 50 до 110 тыс р;</span></p></li>
-									<li><p><span>Канализация - шамбо 10 куб  / септик 1,5куб / сутки = 200 тыс р;</span></p></li>
+									<li><p><span>Разрешительная документация (разрешение, тех документы, ввод) = 30 000р;</span></p></li>
+									<li><p><span>Подготовка участка под сборку дома (заезд на участок – труба 6м (диаметром 325мм) с отсыпкой остается у клиента + лаги на период строки: от 50 до 120 тыс р;</span></p></li>
+									<li><p><span>Канализация - шамбо 10 куб/септик 1,5куб./сутки = 200 тыс. руб;</span></p></li>
 									<li><p><span>Скважина: 3 500 руб/м п (примерно 40 м = 140 000р); насос + обвязка = 40 000р;</span></p></li>
-									<li><p><span>Подключение эл-ва к дому = от 30 до 50 000р;</span></p></li>
+									<li><p><span>Подключение к свету от столба до дома (счетчик день/ночь, автоматы) от 30 до 45 тыс. руб;</span></p></li>
+									<li><p><span>Отопление: от эл. радиаторов до водяных теплых полов: от 70 тыс. руб.</span></p></li>
 								</ul>
 
 								<h2 class="next-h">Пирог кровли</h2>
