edit text and images

--- a/app/about.html
+++ b/app/about.html
@@ -283,41 +283,31 @@
 									<p><span><b>Мы сделали коттеджное строительство доступным!</b></span></p>
 									<p>Мы производим домокомплекты из трехслойных стеновых железобетонных панелей, колонн и ригелей.</p>
 									<p>Каркас нашего дома – железобетонные колонны и ригели.</p>
-									<p>Наша панель — как сэндвич, она состоит из нескольких слоев: облицовка- железобетон,
-										высокоэффективный утеплитель и снова железобетон. Слои связаны между собой арматурой. Наружный слой
-										изготавливаем с поверхностью под покраску, а внутреннюю поверхность делаем гладкой, под оклейку
-										обоями.</p>
-									<p>Перекрытия в нашем доме – также из трехслойных панелей: ребристая плита, утеплитель, бетонная
-										стяжка.</p>
-									<p><span><b>Одно из главных преимуществ нашей технологии — скорость и объем производимых
-												домов.</b></span></p>
+									<p>Наша панель — как сэндвич, она состоит из нескольких слоев: облицовка- железобетон, высокоэффективный утеплитель и снова железобетон. Слои связаны между собой арматурой. Наружный слой изготавливаем с поверхностью под покраску, а внутреннюю поверхность делаем гладкой, под оклейку обоями.</p>
+									<p>Перекрытия в нашем доме – ребристая ж/б плита.</p>
+									<p><span><b>Одно из главных преимуществ нашей технологии — скорость и объем производимых домов.</b></span></p>
 									<p>Мощность завода домокомплектов «КПД 100» - порядка 7-10 домов в месяц.</p>
-									<p><span><b>Наша технология основана на советских ГОСТах и современных финских решениях.</b></span>
+									<p><span><b>В нашей технологии несущую функцию несет железобетонная рама, состоящая из колонн и ригелей, а не стены.</b> Это позволяет нам делать потолки в доме любой высоты и делать свободные планировки.</span>
+									<p><span><b>Несущая нагрузка нашей системы позволяет возводить дома до 6 этажей!</b></span>
+									<p><span>По такому же принципу ведется строительство монолитных многоквартирных домов – сначала делают монолитный каркас, который затем заполняют блоками или кирпичом.</span>
 									</p>
+									<p><span><b>Преимущества наших панелей:</b></span></p>
+									<ol>
+										<li>Наши 3х слойные панели горизонтальные и длинные – до 6м, благодаря чему уменьшилось количество швов. </li>
+										<li>Наши панели идеальной геометрии – благодаря нашему новейшему оборудованию.</li>
+										<li>Между нашими панелями швы минимальны – до 2см, которые мы дополнительно утепляем, тем самым улучшая теплоизоляцию.</li>
+										<li>Монтаж утеплителя внутри панели производится на заводе, что исключает «пустоты», как при утеплении дома «по- старинке» на земельном участке.</li>
+										<li>В коттеджах нет соседей – поэтому вопрос о шумоизоляции не стоит.</li>
+									</ol>
 
-									<div class="spoiler" id="spoiler">
+									<!-- <div class="spoiler" id="spoiler">
 										<p>Все знают панельные дома, их плюсы и минусы:</p>
 										<p><span><b>Плюсы:</b></span></p>
 										<ul>
 											<li>Скорость строительства</li>
 											<li>Цена</li>
 										</ul>
-										<p><span><b>Минусы:</b></span></p>
-										<ul>
-											<li>Типовые планировки</li>
-											<li>низкие потолки – до 2,5м</li>
-											<li>низкая шумоизоляция</li>
-											<li>широкие некрасивые швы между панелями</li>
-											<li>скучные однотипные фасады</li>
-										</ul>
-										<p>Все минусы панельных многоквартирных домов обусловлены тем, что в старых панельных домах панели –
-											самонесущие, то есть сами себя несут.</p>
-										<p><span><b>В нашей технологии несущую функцию мы перенесли на железобетонную раму, состоящую из
-													колонн и ригелей.</b></span> Это позволяет нам делать потолки в доме любой высоты и делать
-											свободные планировки.<br><br>По такому же принципу ведется строительство монолитных
-											многоквартирных домов – сначала делают монолитный каркас, который затем заполняют блоками или
-											кирпичом.<br><br><span><b>Кроме изменения несущей функции мы улучшили технологию и самих
-													панелей:</b></span></p>
+										
 										<ol>
 											<li>Сделали панели горизонтальными и длинными – до 6м, благодаря чему уменьшилось количество швов
 											</li>
@@ -331,14 +321,14 @@
 											<li>В коттеджах нет соседей – поэтому вопрос о шумоизоляции не стоит</li>
 										</ol>
 										<br>
-									</div>
+									</div> -->
 
 								</div>
 							</div>
 
-							<div class="more spoiler-wrap">
+							<!-- <div class="more spoiler-wrap">
 								<a href="#" class="spoiler"><span class="align-elem">подробнее</span></a>
-							</div>
+							</div> -->
 
 						</div>
 					</div>
@@ -361,19 +351,10 @@
 								<div class="align-elem">
 									<div class="align-elem">
 										<ul>
-											<li><span><b>Трёхслойные стеновые железобетонные панели</b></span>, состоящие из двух слоёв бетона
-												и слоя теплоизоляции. Наружная стена - из бетона, высокоэффективный утеплитель пенополистирол и
-												минеральная вата вокруг оконных и дверных проемов (15 см на стеновых панелях). Внутренняя стена,
-												то, что увидят жильцы внутри дома - идеально ровная, даже не требует штукатурки, готовая под
-												обои;</li>
-											<li><span><b>Ребристые плиты перекрытия</b></span>, состоящие из ребристой плиты, утеплителя,
-												бетонной стяжки;</li>
-											<li><span><b>Колонны</b></span> — несущие конструкции, обеспечивающие зданию вертикальную
-												жесткость. По типу колонна сборная. Предназначена служить опорой для верхних этажей, балконов,
-												террас и других элементов построек;</li>
-											<li><span><b>Ригели</b></span> — горизонтальная опорная балка, на которую опираются другие несущие
-												элементы строительного сооружения: стойки, колонны, стены;</li>
-											<li><span><b>Железобетонные ёмкости</b></span>, предназначенные под воду или шамбо;</li>
+											<li><span><b>Трёхслойные стеновые железобетонные панели</b></span>, состоящие из двух слоёв бетона и слоя теплоизоляции. Наружная стена - из бетона, высокоэффективный утеплитель пенополистирол (15 см на стеновых панелях). Внутренняя стена, то, что увидят жильцы внутри дома - идеально ровная, готовая под обои;</li>
+											<li><span><b>Ребристые железобетонные плиты перекрытия</b></span>;</li>
+											<li><span><b>Колонны</b></span> — несущие конструкции, обеспечивающие зданию вертикальную жесткость. По типу колонна сборная. Предназначена служить опорой для верхних этажей, балконов, террас и других элементов построек;</li>
+											<li><span><b>Ригели</b></span> — горизонтальная опорная балка, на которую опираются другие несущие элементы строительного сооружения: стойки, колонны, стены;</li>
 											<li><span><b>Любые сложные железобетонные изделия</b></span>;</li>
 										</ul>
 									</div>
@@ -535,11 +516,7 @@
 								<div class="align-elem">
 									<div class="align-elem">
 										<ul>
-											<li><span><b>Каркасы</b></span> - конструктивная сетка, образованная соединением между собой
-												металлических балок, колонн и других несущих конструкций, которые заполнены впоследствии
-												высокоэффективными утеплительными и звукоизоляционными материалами;</li>
-											<li><span><b>Лестницы металлические наружные и внутренние</b></span>;</li>
-											<li><span><b>Формы любой сложности</b></span>;</li>
+											<li><span><b>Каркасы</b></span> — конструктивная сетка, образованная соединением между собой металлических балок, колонн и других несущих конструкций, которые заполнены впоследствии высокоэффективными утеплительными и звукоизоляционными материалами;</li>
 										</ul>
 									</div>
 								</div>
@@ -563,8 +540,6 @@
 									<div class="align-elem">
 										<ul>
 											<li><span><b>Ограждающие конструкции</b></span>: перилла, парапеты, декоративные элементы;</li>
-											<li><span><b>Террасная доска</b></span> - представляющая собой брашированную доску, покрытую и
-												пропитанную высокоэффективными составами;</li>
 											<li><span><b>Декоративные планки на фасад дома</b></span>;</li>
 										</ul>
 									</div>
