--- a/app/dealers.html
+++ b/app/dealers.html
@@ -199,23 +199,23 @@
 
 					<div class="type-text-block frames-content">
 
-						<h2>Хабаровский завод домокомплектов КПД 100 производит качественные железобетонные дома по уникальной цене всего за месяц!</h2>
+						<h2>Хабаровский завод домокомплектов КПД 100 производит качественные железобетонные дома по уникальной цене всего за 10 дней!</h2>
 						<p>Гарантия на наши дома - 50 лет!</p>
 						<p>Преимущества нашей технологии в скорости строительства и в качестве производства!</p>
 						<h2>Завод домокомплектов КПД 100 приглашает к сотрудничеству дилеров в регионах: г. Владивосток, Южно - Сахалинск, г. Комсомольск, г. Советская Гавань</h2>
 						<h2>В чем Ваша выгода?</h2>
 						<h3>Чтобы Вы смогли посчитать Вашу выгоду от сотрудничества с нами, приведем пример:</h3>
-						<h3><span>Наш дом 147 кв м (8*8м) в 2 этажа, мы продаем за 3 690 тыс рублей.</span></h3>
+						<h3><span>Наш дом 150 кв. м. в 2 этажа, мы продаем за 4 360 тыс. рублей.</span></h3>
 						<p>Эта цена включает в себя:</p>
 						<ul>
-							<li>производство домокомплекта: сваи, колонно-ригельный каркас дома, ребристые плиты перекрытия, трехслойные стеновые панели</li>
-							<li>строительство домокомплекта на участке: фундамент, колонно-ригельный каркас дома, монтаж перекрытий и стеновых панелей, утепление швов между стеновыми панелями;</li>
-							<li>Дополнительные услуги: строительство кровли с утеплением, террас, балконов, установка окон и дверей, устройство утеплителя в ребристых плитах перекрытий первого этажа и межэтажного перекрытия, стяжка пола, покрытие фасада материалом "Терракоат стандарт", установка стояков холодного водоснабжения и канализации, устройство вентиляции</li>
+							<li>Производство домокомплекта: сваи, колонно-ригельный каркас дома, ребристые плиты перекрытия, трехслойные стеновые панели;</li>
+							<li>Строительство домокомплекта на участке: фундамент, монтаж колонно-ригельного каркаса дома, монтаж перекрытий и стеновых панелей, утепление швов между стеновыми панелями;</li>
+							<li>Дополнительные услуги: строительство кровли с утеплением, установка окон и дверей, устройство утеплителя в ребристых плитах перекрытий первого этажа, стяжка пола, покрытие фасада специальной фасадной краской с декоративными элементами Фахверк, устройство вентиляции.</li>
 						</ul>
-						<h3><span>При этом сам домокомплект с завода без строительства и дополнительных услуг стоит всего 1 920 000 рублей!</span></h3>
+						<h3><span>При этом сам домокомплект с завода без строительства и дополнительных услуг стоит всего 2 400 тыс. рублей!</span></h3>
 						<h3>Монтаж дома, все дополнительные услуги по дому Вы можете выполнять в своем регионе самостоятельно и тем самым - зарабатывать!</h3>
 						<h3><span>Вся разница в цене - Ваша!</span></h3>
-						<h3>Срок строительства дома от завода КПД 100 составляет в среднем 1,5 месяца - <br>Cвою прибыль Вы будете получать очень быстро!</h3>
+						<h3>Срок строительства дома от завода КПД 100 составляет в среднем 1,5 месяца - <br>Свою прибыль Вы будете получать очень быстро!</h3>
 						<h2>Станьте партнером уникального завода домокомплектов КПД 100!</h2>
 
 					</div>
