--- a/app/houses.html
+++ b/app/houses.html
@@ -11,20 +11,20 @@
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<link rel="stylesheet" href="title.styles.css?v=3.5">
+	<link rel="stylesheet" href="title.styles.css?v=3.6">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=3.5">
+	<link rel="stylesheet" href="css/main.min.css?v=3.6">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=3.5"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=3.6"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script type="text/javascript" src="title.js"></script>
-	<link rel="stylesheet" href="styles.css?v=3.5">
+	<link rel="stylesheet" href="styles.css?v=3.6">
 	
 	<!-- Yandex.Metrika counter -->
 	<script type="text/javascript" >
@@ -255,7 +255,7 @@
 							</li>
 						</ul>
 						<h3><span>Мы строим дома как на ваших земельных участках, так и в наших коттеджных поселках, расположенных в разных районах города:</span></h3>
-						<h3><span>«Экопарк Север», «Экопарк юг», «Семейный» в с. Тополево.</span></h3>
+						<h3><span><a target="_blank" href="https://xn--80aeibvb0aikeh1l.xn--p1ai/">«Экопарк Север»</a>, <a target="_blank" href="https://xn--80agtbsgi3hpa.xn--p1ai/">«Экопарк юг»</a>, <a target="_blank" href="https://xn----dtbfcayavl9a1i.xn--p1ai/">«Семейный»</a> в с. Тополево.</span></h3>
 
 
 
