--- a/app/index.html
+++ b/app/index.html
@@ -11,14 +11,14 @@
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<link rel="stylesheet" href="title.styles.css?v=3.9">
+	<link rel="stylesheet" href="title.styles.css?v=3.10">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=3.9">
+	<link rel="stylesheet" href="css/main.min.css?v=3.10">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=3.9"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=3.10"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
@@ -47,6 +47,17 @@
 </head>
 
 <body>
+
+	<div class="sticky-button sticky-block">
+		<div class="circle-phone">
+			<a href="https://albank.ru/ru/mortgages/" target="_blank"><img class="img-responsive" src="img/bank-almazenergo.svg" title="Алмазэргиэнбанк" alt="logo"></a>
+			<a href="https://www.sberbank.ru/ru/person/credits/home/buying_complete_house_daln?tab=usl" target="_blank"><img class="img-responsive" src="img/bank-sber.svg" title="Сбербанк" alt="logo"></a>
+			<a href="https://svoedom.ru/rural_mortgage/?utm_source=kpd100zavod_ru&utm_medium=podryadchik&utm_campaign=partnery_svoyo_zhilyo&utm_content=banner&utm_term=khabarovsk%7C19_01_2021" target="_blank"><img class="img-responsive" src="img/bank-svoedom.svg" title="Россельхзбанк" alt="logo"></a>
+			<a href="https://www.pochtabank.ru/service/bistr_doma" target="_blank"><img class="img-responsive" src="img/bank-pochta.svg" title="Почтабанк" alt="logo"></a>
+		</div>
+		<div class="circle first"></div>
+		<div class="circle second"></div>
+	</div>
 
 	<a href="https://www.instagram.com/kpd100zavod.ru/" target="_blank" class="sticky-button instagram">
 		<div class="circle-phone">
