--- a/app/houses.html
+++ b/app/houses.html
@@ -247,7 +247,7 @@
 
 						<span>Наша компания предлагает строительство готовых домов по цене квартиры всего за 3 месяца. Благодаря производству на заводе, срок изготовления домокомплекта составляет до 7 рабочих дней. Собирается такой дом на участке в течение 10 дней, далее монтаж кровли, внутренняя отделка и нанесение фасадного покрытия, после чего вы получаете современный дом.</span>
 
-						<h3><span>Наши дома состоят из трехслойных панелей, колонн и ригелей</span></h3>
+						<h3><span>Наши дома состоят из колонн, ригелей и трехслойных стен</span></h3>
 
 						<h3><span>Дома по нашей технологии:</span></h3>
 						<ul>
